Import of JJORE/Acme-Anything-0.02 from CPAN.
gitpan-cpan-distribution: Acme-Anything
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JJORE/Acme-Anything-0.02.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:                Acme-Anything
-version:             0.01
-abstract:            Anything, even non-existant modules are loadable
+version:             0.02
+abstract:            Anything, even imaginary modules are loadable
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.36
 distribution_type:   module
