--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
---- #YAML:1.0
-name:                Acme-Anything
-version:             0.03
-abstract:            Anything, even imaginary modules are loadable
-license:             ~
-author:              
-    - Josh ben Jore <jjore@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+---
+abstract: 'Anything, even imaginary modules are loadable'
+author:
+  - 'Josh Jore <jjore@cpan.org>'
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.200000, CPAN::Meta::Converter version 2.102400'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Acme-Anything
+version: 0.04
